<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NumbersGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="task">Task</string>
    <string name="result">Result</string>

    <!-- Modes -->
    <string name="mode1">Guess number</string>
    <string name="mode2">Remember more</string>
    <string name="mode3">mode3</string>
    <string name="mode4">mode4</string>
    <string name="mode5">mode5</string>
    <string name="mode6">mode6</string>

    <string-array name="modes_array">
        <item>@string/mode1</item>
        <item>@string/mode2</item>
        <item>@string/mode3</item>
        <item>@string/mode4</item>
        <item>@string/mode5</item>
        <item>@string/mode6</item>
    </string-array>

    <!-- Buttons -->
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    
</resources>